--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clarence Lacombe - Corentin Le Guével - Thibault Eschoua - Jérémy Mear - Sunny Raj Mangu"
+    "Clarence Lacombe - Corentin Le Guével - Thibaut Eschoua - Jérémy Mear - Sunny Raj Mangu"
    ]
   },
   {
